# synapse

./: .gitignore  CHANGELOG.md  FORMAT.md  LICENSE  QA_GATES.md  README.md  README_MCP.md  REVIEW.md  SECURITY.md  SHIP_READY.md  TODO_LAUNCH_UX.md  __init__.py  belief.py  capture.py  card_share.py  checkpoints.py  claude_desktop_config.json  cli.py  client.py  command_dsl.py  communities.py  context_cards.py  context_pack.py  contradictions.py  demo.cast  demo.py  demo_runner.py  demo_script.py  doctor.py  egress_guard.py  embeddings.py  enrich.py  entity_graph.py  episode_graph.py  evidence.py  exceptions.py  extractor.py  forgetting.py  graph_retrieval.py  importers.py  (+38 more)
assets/: scope-demo.cast
bench/: README.md  consumer_bench.py  requirements.txt  run_locomo.py  run_practical.py  scenarios.py
demo/: cross_ai_demo.cast  cross_ai_demo.py  cross_platform_demo.py  demo_30s.sh  full_demo.cast  full_demo.py  onboarding_demo.cast  onboarding_demo.py  real_demo.cast  real_demo.py  real_demo_output.txt  text_to_cast.py
docs/: compatibility-matrix.md
docs/benchmarks/: README.md  safety-utility-benchmark-card.md  safety-utility-benchmark-metadata.json
docs/mcp-registry/: README.md  synapse-mcp.registry.json
docs/onboarding/: INSTALLER_GUIDES.md
docs/onboarding/install/: claude.md  continue.md  cursor.md  openclaw.md  windsurf.md
docs/starter-kits/: README.md  claude-mcp-starter.md  langgraph-starter.md  openai-starter.md
examples/: README.md  context_pack_compiler.py  federation_sync.py  forgetting_privacy.py  knowledge_graph_truth.py  personal_prefs.py  time_travel.py
examples/snippets/: README.md  chat_mode.py  daemon_mode.py  framework_mode.py  library_mode.py  mcp_tool_mode.py
federation/: __init__.py  client.py  content_hash.py  discovery.py  memory_object.py  merkle.py  node.py  server.py  store.py  sync.py  vector_clock.py
integrations/: __init__.py  contract.py  langchain.py  langgraph.py  test_integrations.py
integrations/claude/: README.md  __init__.py  example.py  memory.py  tool.py
integrations/crewai/: README.md  __init__.py  example.py  memory.py
integrations/langchain/: README.md  __init__.py  chat_history.py  example.py  memory.py  retriever.py
integrations/langgraph/: README.md  __init__.py  checkpointer.py  example.py  memory_store.py
integrations/openai/: README.md  __init__.py  example.py  memory.py  tool.py
scripts/: publish_mcp_registry.py  record-scope-gif.py  ux_quality_gates.py
synapse/compat/: __init__.py  mem0.py
tests/: __init__.py  test_appliance_lifecycle.py  test_belief.py  test_bootstrap_flow.py  test_capture.py  test_capture_router.py  test_card_share.py  test_checkpoints.py  test_cli_appliance.py  test_cli_debug.py  test_cli_integrations_permit.py  test_command_dsl.py  test_communities.py  test_connector_contract.py  test_consumer_bench.py  test_context_cards.py  test_context_pack.py  test_contradictions.py  test_demo_runner.py  test_doctor.py  test_doctor_enhanced.py  test_egress_guard.py  test_enrich.py  test_evidence.py  test_forgetting.py  test_graph_retrieval.py  test_import_wizard.py  test_importers.py  test_inspector.py  test_inspector_enhanced.py  test_install_enhanced.py  test_installer.py  test_mcp_appliance.py  test_mem0_compat.py  test_normalization.py  test_onboarding_smoke_e2e.py  test_packs.py  test_policies.py  test_policy_receipts.py  test_review_queue.py  (+15 more)
