[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-ai-memory"
version = "0.12.1"
description = "A neuroscience-inspired memory engine for AI agents featuring private vaults, smart inbox review, and natural-language forgetting. Portable, federated, and zero-dependency."
authors = [{name = "Raghuram Parvataneni"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "memory", "database", "agents", "neuroscience", "bm25", "embeddings", "vaults", "inbox", "forgetting", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
langgraph = ["langgraph>=0.0.1"]
crewai = ["crewai>=0.1.0"]
claude = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
all = ["langchain>=0.1.0", "langchain-core>=0.1.0", "langgraph>=0.0.1", "crewai>=0.1.0", "anthropic>=0.18.0", "openai>=1.0.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
synapse = "cli:main"
synapse-cli = "cli:main"
synapsed = "synapsed:main"
synapse-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/raghuram369/synapse"
"Bug Reports" = "https://github.com/raghuram369/synapse/issues"
"Source" = "https://github.com/raghuram369/synapse"
Documentation = "https://github.com/raghuram369/synapse#readme"

[tool.setuptools]
py-modules = [
    "synapse",
    "cli",
    "synapsed",
    "storage",
    "indexes",
    "entity_graph",
    "episode_graph",
    "embeddings",
    "extractor",
    "client",
    "portable",
    "triples",
    "contradictions",
    "importers",
    "belief",
    "sleep",
    "temporal",
    "graph_retrieval",
    "context_pack",
    "checkpoints",
    "communities",
    "forgetting",
    "evidence",
    "normalization",
    "debug",
    "exceptions",
    "mcp_server",
    "mcp_appliance",
    "command_dsl",
    "context_cards",
    "packs",
    "installer",
    "inspector",
    "service",
    "capture",
    "review_queue",
    "signing",
    "policies",
    "card_share",
    "demo_runner",
    "enrich",
    "watch",
    "scope_policy",
    "egress_guard",
    "vault_manager",
    "memory_inbox",
    "natural_forget",
    "doctor",
]
packages = [
    "federation",
    "integrations",
    "integrations.langchain",
    "integrations.langgraph",
    "integrations.crewai",
    "integrations.claude",
    "integrations.openai",
    "synapse.compat",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
